--- a/compositional_skills/writing/freeform/jokes/techpun/qna.yaml
+++ b/compositional_skills/writing/freeform/jokes/techpun/qna.yaml
@@ -3,18 +3,43 @@ task_description: |
   The pun task enables the telling of funny tech based jokes.
 created_by: amtdas
 seed_examples:
-  - question: Why are spiders so smart?
+  - question: Tell me a tech pun about WEB.
     answer: |
+      Why are spiders so smart?
+
       They can find everything on the WEB.
-  - question: What is a linux user's favorite game?
+    attribution:
+      - source: self-authored
+        license: Apache-2.0
+  - question: Tell me a tech pun about linux.
     answer: |
-      sudo ku!
-  - question: What do computers and sharks have in common?
+      What is a linux user's favorite game?
+
+      Sudo ku!
+    attribution:
+      - source: self-authored
+        license: Apache-2.0
+  - question: Tell me a tech pun about computers.
     answer: |
-      Both have mega bytes!
-  - question: Why does C not like Java?
+      What do computers and sharks have in common?
+
+      Both have Mega Bytes!
+    attribution:
+      - source: self-authored
+        license: Apache-2.0
+  - question: Tell me a tech pun about C.
     answer: |
-      Because Java has a class.
-  - question: Why did the developer go broke?
+      Why does C not like Java?
+
+      Because Java has a Class!
+    attribution:
+      - source: self-authored
+        license: Apache-2.0
+  - question: Tell me a tech pun about developers.
     answer: |
-      Because he used up all his cache.
+      Why did the developer go broke? 
+
+      Because they used up all of the Cache!
+    attribution:
+      - source: self-authored
+        license: Apache-2.0
