--- a/compositional_skills/extraction/linguistic/POS/conjunction/qna.yaml
+++ b/compositional_skills/extraction/linguistic/POS/conjunction/qna.yaml
@@ -4,7 +4,7 @@ task_description: |
   Practice identifying the conjunction in a sentence
 seed_examples:
 - context: |
-    I am learning a new skill and helping open source AI |
+    I am learning a new skill and helping open source AI
   question: |
     Find the conjunction in this sentence.
   answer: |
@@ -27,9 +27,9 @@ seed_examples:
     Find the conjunction in this sentence.
   answer: |
     or
-  attribution: 
+  attribution:
     - source: self-authored
-    license: Apache-2.0
+      license: Apache-2.0
 - context: |
     It is hard to capture the world's knowledge yet the result will be worth it.
   question: |
@@ -45,11 +45,6 @@ seed_examples:
     Find the conjunction in this sentence.
   answer: |
     as soon as
-  attribution: 
+  attribution:
     - source: self-authored
-    license: Apache-2.0
-
-  
-   
-
-
+      license: Apache-2.0
