--- a/compositional_skills/roleplay/explain_like_i_am/primary_schooler/qna.yaml
+++ b/compositional_skills/roleplay/explain_like_i_am/primary_schooler/qna.yaml
@@ -1,4 +1,4 @@
-created_by: shivsr
+created_by: IBM Research
 seed_examples:
 - answer: 'Of course! So, the U.S. has been trying to make friends with the African
     Union (AU), which is a group of African countries working together. They do this
