--- a/compositional_skills/roleplay/explain_like_you_are/fictional/movies/qna.yaml
+++ b/compositional_skills/roleplay/explain_like_you_are/fictional/movies/qna.yaml
@@ -1,4 +1,4 @@
-created_by: shivsr
+created_by: IBM Research
 seed_examples:
 - answer: 'Ahoy there, matey! Ye be askin'' about the genetic fallacy, aye? Well,
     strap yeselves in for a tale of misleadin'' logic and dodgy reasoning!\n\nThe
