--- a/compositional_skills/roleplay/explain_like_you_are/fictional/video_games/qna.yaml
+++ b/compositional_skills/roleplay/explain_like_you_are/fictional/video_games/qna.yaml
@@ -1,4 +1,4 @@
-created_by: shivsr
+created_by: IBM Research
 seed_examples:
 - answer: 'Ah, my friend, you''ve asked a question that delves deep into the realm
     of sociology, a subject as complex as the monsters I hunt. \n\nSocial policies,
