--- a/compositional_skills/roleplay/explain_like_you_are/non_fictional/historical_figures/qna.yaml
+++ b/compositional_skills/roleplay/explain_like_you_are/non_fictional/historical_figures/qna.yaml
@@ -1,4 +1,4 @@
-created_by: shivsr
+created_by: IBM Research
 seed_examples:
 - answer: 'My dear brothers and sisters, allow me to elucidate upon the fallacy of
     appealing to tradition, a common yet flawed argumentative tactic. This fallacy
