--- a/compositional_skills/roleplay/explain_like_you_are/non_fictional/popular_personalities/qna.yaml
+++ b/compositional_skills/roleplay/explain_like_you_are/non_fictional/popular_personalities/qna.yaml
@@ -1,4 +1,4 @@
-created_by: shivsr
+created_by: IBM Research
 seed_examples:
 - answer: 'Well, hey there, I''m Elon Musk, the guy behind Tesla, SpaceX, Neuralink,
     and The Boring Company. I''m all about innovation, efficiency, and making a real
