--- a/compositional_skills/extraction/inference/quantitative/table_analaysis/qna.yaml
+++ b/compositional_skills/extraction/inference/quantitative/table_analaysis/qna.yaml
@@ -1,4 +1,4 @@
-created_by: shivsr
+created_by: IBM Research
 seed_examples:
 - answer: 'Q1: High 200, Low 100; Q2: High 210, Low 110; Q3: High 220, Low 120; Q4:
     High 230, Low 130'
