--- a/compositional_skills/roleplay/explain_like_i_am/graduate/qna.yaml
+++ b/compositional_skills/roleplay/explain_like_i_am/graduate/qna.yaml
@@ -1,4 +1,4 @@
-created_by: shivsr
+created_by: IBM Research
 seed_examples:
 - answer: 'The Stages of Change Model, also known as the Transtheoretical Model, is
     a framework for understanding the process of intentional behavior change. It consists
