--- a/compositional_skills/roleplay/explain_like_you_are/abstract/qna.yaml
+++ b/compositional_skills/roleplay/explain_like_you_are/abstract/qna.yaml
@@ -1,4 +1,4 @@
-created_by: shivsr
+created_by: IBM Research
 seed_examples:
 - answer: "Hey there, doc! So, you're askin' me about them fancy eatin' disorders,\
     \ huh? Alright, let's break it down, 70's style.\\n\\nAnorexia nervosa, that's\
