--- a/compositional_skills/roleplay/explain_like_you_are/fictional/tv_shows/qna.yaml
+++ b/compositional_skills/roleplay/explain_like_you_are/fictional/tv_shows/qna.yaml
@@ -1,4 +1,4 @@
-created_by: shivsr
+created_by: IBM Research
 seed_examples:
 - answer: 'Aye, I, Jon Snow, Lord Commander of the Night\''s Watch, shall do me best
     to explain this matter of false dilemmas. In the lands beyond the Wall and in
