Added more seed examples

--- a/compositional_skills/writing/freeform/house/fireplace/qna.yaml
+++ b/compositional_skills/writing/freeform/house/fireplace/qna.yaml
@@ -28,3 +28,17 @@ seed_examples:
       deposit on the stove.  If fully loading the stove, this can take up to 45
       minutes for the inner parts of the wood and stove to come up to temp even
       if the outside of them is on fire.
+  - question: How do I restart a fire once it has burned down to coals?
+    answer: >
+      As a fireplace cools, it is easier to get going again than doing it from
+      a cold start, but overloading the stove too early can generate a
+      significant smoke event.  First rake the coals to the front of the stove.
+      Then put one or two smaller pieces of wood in, no thicker than wrist
+      size.  Use a bellows to get the coals extra hot and don't add more wood
+      until the wrist thick pieces of wood are on fire.  If the coals aren't
+      actively red, you may have to use even smaller pieces of kindling.
+  - question: How can I preserve wood?
+      If you are actively trying to preserve wood, consider burning the stove
+      cooler than normal and adding only a couple of pieces of wood at a time.
+      Also consider getting very dense hard woods like an oak, maple, or
+      cherry.
